# citadel

./: README.md  collectHeaders  linux_build.sh
castle/app/: Activity.android.cpp  Activity.ios.mm  Activity.linux.cpp  Activity.pc.cpp  Activity.win32.cpp
castle/game/: Game.cpp  Game.h  Updater.h
castle/renderers/: Renderer.h  StereoscopicRenderer.h
keep/: constants.h  types.h
keep/android/: CNativeActivity.cpp
keep/containers/: String.cpp  String.h  Vector.h
keep/crypto/: Hash.h  Sha1.cpp  Sha1.h  Sha1Hash.cpp  Sha1Hash.h  UUID.cpp  UUID.h
keep/io/: File.h  IOStream.h  OStream.h  PhysicalFile.android.cpp  PhysicalFile.h  PhysicalFile.win32.cpp
keep/utils/: GameViewController.h  android.h  ios.h  ios.m  linux.h  win32.cpp  win32.h
keep/window/: OpenGLWindow.android.cpp  OpenGLWindow.h  OpenGLWindow.ios.cpp  OpenGLWindow.linux.cpp  OpenGLWindow.win32.cpp  SystemWindow.h  Window.h  Window.win32.cpp  Window.xcb.cpp  Window.xlib.cpp
projects/_ios/citadel.xcodeproj/: project.pbxproj
projects/_ios/citadel.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
projects/android/citadel/: CMakeLists.txt  build.gradle
projects/android/citadel/src/main/: AndroidManifest.xml
projects/android/citadel/src/main/cpp/: CTypes.h
projects/android/citadel/src/main/java/com/bastiongames/citadel/: GLView.java  OldCitadelActivity.java
projects/android/gradle/wrapper/: gradle-wrapper.properties
projects/ios/: Config.xcconfig  GameViewController.h  GameViewController.mm  Main.storyboard
projects/ios/citadel.xcodeproj/: project.pbxproj
projects/ios/citadel.xcodeproj/project.xcworkspace/xcuserdata/ericpattison.xcuserdatad/: UserInterfaceState.xcuserstate
projects/ios/citadel.xcodeproj/xcuserdata/ericpattison.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
projects/ios/citadel.xcodeproj/xcuserdata/ericpattison.xcuserdatad/xcschemes/: citadel.xcscheme  xcschememanagement.plist
projects/linux/: CMakeLists.txt
projects/windows/citadel/: citadel.vcxproj  citadel.vcxproj.filters
watchtower/: Color.h  Renderable.h
watchtower/device/: Device.h  Device.vulkan.cpp  Device.vulkan.h
watchtower/device/OpenGL/: OpenGLDevice.android.cpp  OpenGLDevice.h  OpenGLDevice.ios.cpp  OpenGLDevice.linux.cpp  OpenGLDevice.win32.cpp
